// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  class="card-container"
>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/iphone10.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Iphone X 64GB
      </h5>
       
      <h4
        class="card-title"
      >
        800$
      </h4>
       
      <p
        class="card-text"
      >
        Packed with Innovative Features Including a Super Retina Display, TrueDepth Camera System, Face ID and A11 Bionic Chip with Neural Engine
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          0 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/galaxys21.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Samsung Galaxy S21 128GB
      </h5>
       
      <h4
        class="card-title"
      >
        1000$
      </h4>
       
      <p
        class="card-text"
      >
        Introducing Galaxy S21 Ultra 5G. Designed with a unique contour-cut camera to create a revolution in photography — letting you capture cinematic 8K video and snap epic stills, all in one go.
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          0 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/nokia2600.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Nokia 2600
      </h5>
       
      <h4
        class="card-title"
      >
        Priceless
      </h4>
       
      <p
        class="card-text"
      >
        Give me back my 2007
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          0 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`10.h.1 Cards 10.h.1.3 first card plus button click 1`] = `
<div
  class="card-container"
>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/iphone10.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Iphone X 64GB
      </h5>
       
      <h4
        class="card-title"
      >
        800$
      </h4>
       
      <p
        class="card-text"
      >
        Packed with Innovative Features Including a Super Retina Display, TrueDepth Camera System, Face ID and A11 Bionic Chip with Neural Engine
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          1 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/galaxys21.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Samsung Galaxy S21 128GB
      </h5>
       
      <h4
        class="card-title"
      >
        1000$
      </h4>
       
      <p
        class="card-text"
      >
        Introducing Galaxy S21 Ultra 5G. Designed with a unique contour-cut camera to create a revolution in photography — letting you capture cinematic 8K video and snap epic stills, all in one go.
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          0 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/nokia2600.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Nokia 2600
      </h5>
       
      <h4
        class="card-title"
      >
        Priceless
      </h4>
       
      <p
        class="card-text"
      >
        Give me back my 2007
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          0 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`10.h.1 Cards 10.h.1.4 second card minus button click 1`] = `
<div
  class="card-container"
>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/iphone10.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Iphone X 64GB
      </h5>
       
      <h4
        class="card-title"
      >
        800$
      </h4>
       
      <p
        class="card-text"
      >
        Packed with Innovative Features Including a Super Retina Display, TrueDepth Camera System, Face ID and A11 Bionic Chip with Neural Engine
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          1 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/galaxys21.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Samsung Galaxy S21 128GB
      </h5>
       
      <h4
        class="card-title"
      >
        1000$
      </h4>
       
      <p
        class="card-text"
      >
        Introducing Galaxy S21 Ultra 5G. Designed with a unique contour-cut camera to create a revolution in photography — letting you capture cinematic 8K video and snap epic stills, all in one go.
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          0 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/nokia2600.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Nokia 2600
      </h5>
       
      <h4
        class="card-title"
      >
        Priceless
      </h4>
       
      <p
        class="card-text"
      >
        Give me back my 2007
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          0 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`10.h.1 Cards 10.h.1.5 third card plus button two clicks 1`] = `
<div
  class="card-container"
>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/iphone10.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Iphone X 64GB
      </h5>
       
      <h4
        class="card-title"
      >
        800$
      </h4>
       
      <p
        class="card-text"
      >
        Packed with Innovative Features Including a Super Retina Display, TrueDepth Camera System, Face ID and A11 Bionic Chip with Neural Engine
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          1 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/galaxys21.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Samsung Galaxy S21 128GB
      </h5>
       
      <h4
        class="card-title"
      >
        1000$
      </h4>
       
      <p
        class="card-text"
      >
        Introducing Galaxy S21 Ultra 5G. Designed with a unique contour-cut camera to create a revolution in photography — letting you capture cinematic 8K video and snap epic stills, all in one go.
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          0 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/nokia2600.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Nokia 2600
      </h5>
       
      <h4
        class="card-title"
      >
        Priceless
      </h4>
       
      <p
        class="card-text"
      >
        Give me back my 2007
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          1 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`10.h.1 Cards 10.h.1.6 third card minus button click 1`] = `
<div
  class="card-container"
>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/iphone10.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Iphone X 64GB
      </h5>
       
      <h4
        class="card-title"
      >
        800$
      </h4>
       
      <p
        class="card-text"
      >
        Packed with Innovative Features Including a Super Retina Display, TrueDepth Camera System, Face ID and A11 Bionic Chip with Neural Engine
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          1 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/galaxys21.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Samsung Galaxy S21 128GB
      </h5>
       
      <h4
        class="card-title"
      >
        1000$
      </h4>
       
      <p
        class="card-text"
      >
        Introducing Galaxy S21 Ultra 5G. Designed with a unique contour-cut camera to create a revolution in photography — letting you capture cinematic 8K video and snap epic stills, all in one go.
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          0 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/nokia2600.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Nokia 2600
      </h5>
       
      <h4
        class="card-title"
      >
        Priceless
      </h4>
       
      <p
        class="card-text"
      >
        Give me back my 2007
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          0 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`10.h.1 Cards 10.h.1.7 third card minus button two more clicks 1`] = `
<div
  class="card-container"
>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/iphone10.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Iphone X 64GB
      </h5>
       
      <h4
        class="card-title"
      >
        800$
      </h4>
       
      <p
        class="card-text"
      >
        Packed with Innovative Features Including a Super Retina Display, TrueDepth Camera System, Face ID and A11 Bionic Chip with Neural Engine
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          1 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/galaxys21.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Samsung Galaxy S21 128GB
      </h5>
       
      <h4
        class="card-title"
      >
        1000$
      </h4>
       
      <p
        class="card-text"
      >
        Introducing Galaxy S21 Ultra 5G. Designed with a unique contour-cut camera to create a revolution in photography — letting you capture cinematic 8K video and snap epic stills, all in one go.
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          0 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
  <div
    class="card"
  >
    <img
      class="card-img-top"
      src="/Lessons/9. Frameworks 101. Vue.js/Homework/Task 1. Cards/assets/nokia2600.jpg"
    />
     
    <div
      class="card-body"
    >
      <h5
        class="card-title"
      >
        Nokia 2600
      </h5>
       
      <h4
        class="card-title"
      >
        Priceless
      </h4>
       
      <p
        class="card-text"
      >
        Give me back my 2007
      </p>
       
      <div
        class="card__buttons"
      >
        <button
          class="btn btn-primary button-plus"
        >
          +
        </button>
         
        <button
          class="btn btn-primary button-minus"
        >
          -
        </button>
         
        <div>
          0 шт.
        </div>
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;
